--- a/src/app/operator/operator.component.css
+++ b/src/app/operator/operator.component.css
@@ -1,22 +1,15 @@
-.operators-list {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-around;
-  height: 100vh;
-
-  @media (max-width: 1350px) and (min-height: 560px) {
-    flex-direction: column;
-    justify-content: space-between;
-  }
-}
-
-.operator-card {
+.operator-page {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
+  height: 95vh;
+}
+
+.operator-info {
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  color: inherit;
 }
 
 img {
