--- a/src/app/operators-list/operators-list.component.html
+++ b/src/app/operators-list/operators-list.component.html
@@ -1,6 +1,6 @@
 <div class="operators-list">
   <div class="operator-card" *ngFor="let operator of operators">
-    <a [routerLink]="['operator/', operator.id]">
+    <a [routerLink]="['/operator']" [queryParams]="{ id: operator.id }" queryParamsHandling="merge">
       <div>{{ operator.name }}</div>
       <div class="image-container">
         <img src="{{ operator.image }}" alt="{{ operator.alt }}" />
